Refactor all trim().isEmpty() checks to use isBlank()